Bug 184960 - Column headers cannot be restored if all are hidden
Summary: Column headers cannot be restored if all are hidden
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (other bugs)
Version First Reported In: SVN
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 201720 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-02-19 18:46 UTC by Jonathan Marten
Modified: 2009-07-28 15:45 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Marten 2009-02-19 18:46:07 UTC
+++ This bug was initially created as a clone of Bug #182776 +++

Version:           1.4.0 (using 4.2.00 (KDE 4.2.0), Kubuntu packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.28-6-generic

This may apply to all header columns in Kontact I don't know, I didn't want to try in case I lost them too.

It started with trying to drag widen the columns in the Akregator sources pane and the column order somehow got changed.  I could not restore the default column order no which way, by dragging them back across or otherwise.

I decided to use the hide or delete columns feature and then restore them all again.  So I hid all of the columns and the columns header bar then totally disappeared and I cannot find any way to restore it or the columns again.

-----------------------------------------------------------------------

Original closed as a duplicate in error.  Apologies for that - the two attached screenshots and comments #3,#4 described the resizing problem but
were not at all relevant to the original report.
Comment 1 Thomas Capricelli 2009-04-01 00:24:03 UTC
i have the same problem here. Is there any way to get the header back.. ????? even by modifying some config file by hand ?
Comment 2 squan 2009-05-18 21:13:13 UTC
Another related problem:
I moved the date column to the very left. Then while selecting other feeds from the feed list the column disappeared (could be that more column reordering actions and a restart of the application is necessary to trigger that problem).

> Is there any way to get the header back.. ??
Yes, just delete the "ArticleListFeedHeaders=" and similar lines from akregatorrc and restart (the application :)).

By the way, these lines look suspicious, e.g.
SubscriptionListHeaders=AAAA/wAAAAAAAAABAAAAAQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAASwAAAADAQAAAQAAAAAAAAAAAAAAAGT/////AAAAgQAAAAAAAAABAAABLAAAAAMAAAAA
I doubt that this is a valid value.
Possibly KDE4 has a problem with it configuration system.

While their is a workaround for getting headers back, it should not be possible to hide _all_ columns in the first place.
Should be a one liner to fix that.
Comment 3 Jonathan Marten 2009-05-19 09:01:30 UTC
@ comment#2: No, there isn't a problem - the values seen in the configuration file are as expected.  This is the Base64 encoding of the header state, from QHeaderView::saveState().
Comment 4 Frank Osterfeld 2009-05-19 10:46:46 UTC
> Should be a one liner to fix that.

I don't think there is an one-liner to prevent people from resizing columns to zero. But it would be possible for the menu, yes.
Comment 5 Olivier Trichet 2009-07-01 14:26:16 UTC
SVN commit 990009 by otrichet:

Ensure that at least one column is always visible

BUG: 184960

 M  +19 -1     articlelistview.cpp  
 M  +9 -1      subscriptionlistview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=990009
Comment 6 Christophe Marin 2009-07-28 15:45:47 UTC
*** Bug 201720 has been marked as a duplicate of this bug. ***