Ensure that at least one column is always visible

BUG: 184960

svn path=/trunk/KDE/kdepim/akregator/; revision=990009